update api delete all room
