# swagger.json
@@ -692,6 +692,37 @@
         }
       }
     },
+    "/matches/delete/all": {
+      "delete": {
+        "tags": [
+          "matches"
+        ],
+        "summary": "Xóa tất cả phòng chơi",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of matches",
+            "required": true,
+            "schema": {
+              "$ref": "#/components/schemas/id"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/matches"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/auth/register": {
       "post": {
         "tags": [
